Final commit: this better work

--- a/Project 2/Project 2/Base.lproj/Main.storyboard
+++ b/Project 2/Project 2/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ynN-p9-Vrl">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wvg-C0-blj">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
@@ -294,7 +294,6 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
-                                    <action selector="isCapital:" destination="ynN-p9-Vrl" eventType="editingDidEnd" id="wVW-lW-Dgn"/>
                                     <action selector="textFieldEditingDidChange:" destination="ynN-p9-Vrl" eventType="editingDidEnd" id="5DH-oa-IT4"/>
                                 </connections>
                             </textField>
@@ -302,6 +301,9 @@
                                 <rect key="frame" x="187" y="433" width="41" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Finish"/>
+                                <connections>
+                                    <segue destination="h6L-Ff-E0k" kind="push" id="dXe-Te-i25"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -318,6 +320,31 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0hk-Y0-yoX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2339.130434782609" y="135.9375"/>
+        </scene>
+        <!--Goal-->
+        <scene sceneID="5jK-T1-JEB">
+            <objects>
+                <viewController id="h6L-Ff-E0k" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="QhY-Hy-QVt">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Goal Achieved!!!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l1J-KA-uJC">
+                                <rect key="frame" x="145" y="281" width="125" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="2V7-oX-t7N"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Goal" id="Ani-Cu-Wnu"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cS4-Pk-S1w" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3049" y="137"/>
         </scene>
     </scenes>
 </document>
